<resources>
    <string name="app_name">App2Night</string>
    <string name="Partys">Partys</string>
    <string name="google_maps_key">AIzaSyAkl3QTu2Cj28FXqttsrXom2HeAGkwR6Lg</string>
    <string name="Standort">Standort</string>
    <string name="Account">Account</string>
    <string name="Einstellungen">Einstellungen</string>
    <string name="Kontakt">Kontakt</string>
    <string name="title_activity_maps">Map</string>
    <string name="wer">Wer?</string>
    <string name="wo">Wo?</string>
    <string name="wann">Wann?</string>
    <string name="wieviel">Wie Viel?</string>

    <string-array name="Musikrichtungen">
        <item>Musikrichtung wählen</item>
        <item>Blues</item>
        <item>Charts</item>
        <item>Dance</item>
        <item>Hardrock</item>
        <item>Heavy Metal</item>
        <item>HipHop</item>
        <item>House</item>
        <item>Jazz</item>
        <item>Klassik</item>
        <item>Oldies</item>
        <item>Pop</item>
        <item>Rap</item>
        <item>Rock</item>
        <item>Schlager</item>
        <item>Techno</item>
        <item>Volksmusik</item>
    </string-array>

    <string-array name="EuroBeträge">
        <item>Eintritt wählen</item>
        <item>1€</item>
        <item>2€</item>
        <item>3€</item>
        <item>4€</item>
        <item>5€</item>
        <item>6€</item>
        <item>7€</item>
        <item>8€</item>
        <item>9€</item>
        <item>10€</item>
        <item>11€</item>
        <item>12€</item>
        <item>13€</item>
        <item>14€</item>
        <item>15€</item>
        <item>16€</item>
        <item>17€</item>
        <item>18€</item>
        <item>19€</item>
        <item>20€</item>
    </string-array>

    <string-array name="Veranstaltungsort">
        <item>Darmsheim, Dätzinger Straße 110</item>
        <item>Grafenau, Döffinger Straße 20</item>
        <item>Böblingen, Herbert Straße 31</item>
        <item>Sindelfingen, Gottlieb-Daimler-Straße 42</item>
    </string-array>

    <string-array name="Veranstalter">
        <item>Vereinsheim Darmsheim</item>
        <item>Vereinsheim Grafenau</item>
        <item>Böblinger Gemeinde</item>
        <item>Sindelfinger Gemeinde</item>
    </string-array>

    <string-array name="Veranstaltungseintritt">
        <item>5 €</item>
        <item>10 €</item>
        <item>3 €</item>
        <item>10 €</item>
    </string-array>

    <string-array name="Veranstaltungszeitpunkt">
        <item>26. Oktober 21:00</item>
        <item>30. September 20:00</item>
        <item>22. Dezember 19:00</item>
        <item>29. Oktober 23:00</item>
    </string-array>

    <string-array name="Veranstaltungsname">
        <item>Wasen Warm-Up Darmsheim</item>
        <item>Schützenfest Grafenau</item>
        <item>Böblinger Straßenfest</item>
        <item>Sindelfinger Kinoabend</item>
    </string-array>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

</resources>
